[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/StroheimRoom/Room.gd" type="Script" id=1]
[ext_resource path="res://scenes/Sidescroller.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Pause.tscn" type="PackedScene" id=4]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Stalingrad/Room.png" type="Texture" id=6]
[ext_resource path="res://assets/Stalingrad/RoomFG.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 364.909, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 200 )

[sub_resource type="GDScript" id=3]
script/source = "extends Label

func update_objective_text(won = false):
	if won == false:
		var t = \"\"
		for i in get_node(\"../../\").objectives:
			t += \"\\n\" + i
		text = \"Objectives: \" + t
	else:
		text = \"Level Complete!\"
func _ready():
	update_objective_text()

"

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.28806, 111.863 )

[node name="Room" type="Node2D"]
scale = Vector2( 1.71008, 1.71008 )
z_index = 1
z_as_relative = false
script = ExtResource( 1 )

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( -2.11758e-22, -5.29396e-23 )
scale = Vector2( 1.21866, 1.21866 )
texture = ExtResource( 6 )
offset = Vector2( 300, 150 )
__meta__ = {
"_editor_description_": ""
}

[node name="ForeGround" type="Sprite" parent="."]
visible = false
position = Vector2( 0.2, 115.83 )
scale = Vector2( 1.21866, 1.21866 )
z_index = 4096
z_as_relative = false
texture = ExtResource( 7 )
centered = false

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 300, 299.835 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 65.7602, 35.165 )
shape = SubResource( 1 )

[node name="RightWallBody" type="StaticBody2D" parent="."]
position = Vector2( 38.927, 185 )

[node name="RightWall" type="CollisionShape2D" parent="RightWallBody"]
position = Vector2( 619.567, 0.794952 )
shape = SubResource( 2 )

[node name="LeftWallBody" type="StaticBody2D" parent="."]
position = Vector2( 38.927, 185 )

[node name="LeftWall" type="CollisionShape2D" parent="LeftWallBody"]
position = Vector2( -3.8147e-06, -1.52588e-05 )
shape = SubResource( 2 )

[node name="Sidescroller" type="Node2D" parent="."]
position = Vector2( 14.2436, 0 )
z_index = 10
script = ExtResource( 2 )

[node name="Player" parent="Sidescroller" instance=ExtResource( 3 )]
position = Vector2( 536, 240 )
Bullet = ExtResource( 5 )
in_cutscene = true

[node name="HealthBar" parent="Sidescroller/Player" index="0"]
visible = false

[node name="WinTimer" type="Timer" parent="Sidescroller"]
wait_time = 3.0
one_shot = true

[node name="Pause" parent="Sidescroller" instance=ExtResource( 4 )]

[node name="ObjectiveLabel" type="Label" parent="Sidescroller/Pause"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -388.0
margin_right = -20.0
margin_bottom = 14.0
text = "Objectives:"
align = 2
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 325.985, 182.614 )
current = true
zoom = Vector2( 0.867, 0.867 )

[node name="LevelSwitch" type="Area2D" parent="."]
position = Vector2( 229.741, 41.565 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelSwitch"]
position = Vector2( -297.756, 181.816 )
shape = SubResource( 4 )
[connection signal="collided" from="Sidescroller/Player" to="." method="_on_Player_collided"]
[connection signal="win" from="Sidescroller/Player" to="Sidescroller" method="_on_Player_win"]
[connection signal="timeout" from="Sidescroller/WinTimer" to="Sidescroller" method="_on_WinTimer_timeout"]
[connection signal="body_entered" from="LevelSwitch" to="." method="_on_LevelSwitch_body_entered"]

[editable path="Sidescroller/Player"]
